[package]
name = "ci_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"

jwalk = "0.8.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

thiserror = "2.0.15"
rayon = "1.11.0"
windows = { version = "0.61.3", features = ["Storage"] }
ignore = "0.4.23"
num_cpus = "1.17.0"
windows-sys = "0.60.2"
clap = { version = "4.5.46", features = ["derive"] }


[profile.release]
strip = true
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
