[package]
name = "unreal-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
rayon = "1.11.0"
ignore = { version = "0.4.23" }
num_cpus = "1.17.0"
clap = { version = "4.5.47", features = ["derive", "string"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
toml = "0.9.7"
git2 = "0.20.2"
zip = "6.0.0"
tempfile = "3.23.0"
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = ["Storage"] }
windows-sys = "0.61.2"

[profile.release]
strip = true
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
